# anamorpher

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: app.py  sanitizer.py
backend/adversarial_generators/: bicubic_gen_payload.py  bilinear_gen_payload.py  nearest_gen_payload.py
backend/downsamplers/: __init__.py  base.py  opencv_downsampler.py  pillow_downsampler.py  pytorch_downsampler.py  tensorflow_downsampler.py
frontend/: index.html  script.js  styles.css
tests/: test_bicubic_gen_payload.py  test_bilinear_gen_payload.py  test_build.py  test_dependencies.py  test_dependency_constraints.py  test_nearest_gen_payload.py  test_type_fixes_verification.py
