[project]
name = "anamorpher"
version = "0.1.0"
description = "Image scaling and adversarial generation tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0,<4.0.0",
    "Flask-CORS>=4.0.0,<5.0.0",
    "opencv-python>=4.8.0,<5.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tensorflow>=2.15.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0,<3.0.0",
    "bleach>=6.0.0,<7.0.0",
    "MarkupSafe>=2.1.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.11",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "SIM108", # ternary operator suggestion (stylistic)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F401",   # unused imports (intentional import tests)
    "B011",   # assert False (valid in tests)
    "E402",   # import not at top (sys.path needed)
    "SIM117", # nested with (stylistic)
]

[tool.ty.src]
exclude = ["tests/"]  # Exclude tests (sys.path manipulation, mock patterns)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
